DABACKUPS-51: Added new mkdocs functionalility to repo and new TNA logo

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,6 +1,6 @@
 site_name: Immutable AWS Backup Terraform module
 site_description: Terraform module for Immutable AWS Backup
-site_author: Kurtis Mash
+site_author: The National Archives
 site_url: https://nationalarchives.github.io/terraform-aws-immutable-aws-backup/
 repo_name: nationalarchives/terraform-aws-immutable-aws-back
 repo_url: https://github.com/nationalarchives/terraform-aws-immutable-aws-backup
@@ -8,7 +8,7 @@ edit_uri: edit/main/docs/
 use_directory_urls: true
 theme:
   name: material
-  logo: assets/images/cert-logo.svg
+  logo: assets/images/tna.png
   palette:
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
@@ -41,25 +41,9 @@ extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/nationalarchives/terraform-aws-immutable-aws-backup
-    # - icon: fontawesome/brands/twitter
-    #   link: https://twitter.com/paulschwarzen
 
 nav:
   - Home: index.md
-  - Getting started: getting-started.md 
-  - Automation: automation.md
-  - CA Certificate locations: locations.md
-  - Client certificates: client-certificates.md
-  - Configuration options: options.md
-  - Development: development.md
-  - FAQs: faq.md
-  - Revocation: revocation.md
-  - Security: security.md
-  - How-to guides:
-    - API Gateway: how-to-guides/api.md 
-    - Application load balancer: how-to-guides/alb.md
-    - IAM Roles Anywhere: how-to-guides/iam.md
-  - Terraform reference: reference.md
 
 plugins:
   - social
