--- a/.github/workflows/tflint.yaml
+++ b/.github/workflows/tflint.yaml
@@ -14,6 +14,7 @@ jobs:
           tflint_version: v0.58.0
 
       - name: Install TFLint AWS Ruleset Plugin
+        run: tflint --init
         run: tflint --install-plugin=tflint-ruleset-aws
 
       - name: Run TFLint
