DABACKUPS-66: Fixed issues with script for TFLint

--- a/.github/workflows/infrastructure-checks.yaml
+++ b/.github/workflows/infrastructure-checks.yaml
@@ -63,4 +63,5 @@ jobs:
         run: |
           echo "Running TFLint in root directory"
           # TFLint typically runs on the entire directory recursively from the current working directory.
+          tflint --init || { echo "TFLint init failed"; exit 1; }
           tflint || { echo "TFLint failed"; exit 1; }
