--- a/.github/workflows/tflint.yaml
+++ b/.github/workflows/tflint.yaml
@@ -1,6 +1,7 @@
 name: TFLint
 
-on: [push, pull_request]
+on:
+  workflow_call:
 
 jobs:
   tflint:
@@ -12,6 +13,7 @@ jobs:
         uses: terraform-linters/setup-tflint@v3
         with:
           tflint_version: v0.58.0
+          checksum: tflint-ruleset-aws_linux_amd64
 
       - name: Initialise & Install TFLint AWS Ruleset Plugin
         run: tflint --init
