DABACKUPS-66: Updated the both workflow yamls

--- a/.github/workflows/infrastructure-checks.yaml
+++ b/.github/workflows/infrastructure-checks.yaml
@@ -52,7 +52,7 @@ jobs:
     needs: terraform_validation 
     steps:
       - name: Checkout Repository for Reusable Workflow
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Call TFLint Reusable Workflow
         uses: ./.github/workflows/tflint.yaml
