--- a/.github/workflows/tflint.yaml
+++ b/.github/workflows/tflint.yaml
@@ -7,13 +7,13 @@ jobs:
   tflint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
 
       - name: Setup TFLint with checksum verification
-        uses: terraform-linters/setup-tflint@v3
+        uses: terraform-linters/setup-tflint@65effd5f53a9247b550ede916c626b4ba20935c5
         with:
           tflint_version: v0.58.0
-          checksum:  terraform-linters/setup-tflint@65effd5f53a9247b550ede916c626b4ba20935c5
+          checksums: 6fe1ebb10b0e15e51c77bf772729bbf72265c5d29a2a2de97d2463584e88cb47
 
       - name: Initialise & Install TFLint AWS Ruleset Plugin
         run: tflint --init
