--- a/.github/workflows/tflint.yaml
+++ b/.github/workflows/tflint.yaml
@@ -13,7 +13,8 @@ jobs:
         uses: terraform-linters/setup-tflint@90f302c255ef959cbfb4bd10581afecdb7ece3e6
         with:
           tflint_version: v0.58.0
-          checksums: 6fe1ebb10b0e15e51c77bf772729bbf72265c5d29a2a2de97d2463584e88cb47
+          checksums: |
+            6fe1ebb10b0e15e51c77bf772729bbf72265c5d29a2a2de97d2463584e88cb47
 
       - name: Initialise & Install TFLint AWS Ruleset Plugin
         run: tflint --init
