DABACKUPS-66: Corrected checksums

--- a/.github/workflows/tflint.yaml
+++ b/.github/workflows/tflint.yaml
@@ -13,11 +13,11 @@ jobs:
         uses: terraform-linters/setup-tflint@90f302c255ef959cbfb4bd10581afecdb7ece3e6
         with:
           tflint_version: v0.58.0
-          checksum: 6fe1ebb10b0e15e51c77bf772729bbf72265c5d29a2a2de97d2463584e88cb47
+          checksums: |
+            1e8ccdf3e4b57ba154545b4343621bf46f25ca8f5cc97e36432469752f7ef0c0 
 
       - name: Initialise & Install TFLint AWS Ruleset Plugin
         run: tflint --init
 
       - name: Run TFLint
         run: tflint
-
