Only update gh-pages when the docs change

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ dev_addr: localhost:8888
 use_directory_urls: true
 theme:
   name: material
-  logo: assets/images/tna.png
+  logo: https://raw.githubusercontent.com/nationalarchives/tna-frontend/main/src/nationalarchives/assets/images/tna-square-logo.svg
   palette:
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
@@ -25,7 +25,6 @@ theme:
     - navigation.instant.progress
     - navigation.tracking
     - pymdownx.snippets
-    - navigation.footer
     - toc.integrate
     - navigation.top
     - search.suggest
@@ -45,6 +44,7 @@ extra:
 
 nav:
   - Home: index.md
+  - Concept: concept.md
 
 plugins:
   - social
