--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -1,15 +1,18 @@
-name: Publish website 
+name: Publish website
 on:
   push:
     branches:
       - main
+    paths:
+      - "mkdocs.yml"
+      - "docs/**"
   workflow_dispatch:
 
 permissions:
   contents: write
   id-token: write
   pages: write
-  
+
 jobs:
   deploy:
     name: Publish docs website
@@ -27,8 +30,8 @@ jobs:
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-      
-      - name: Setup Python 
+
+      - name: Setup Python
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: 3.13
@@ -44,7 +47,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements-docs.txt
-      
+
       - name: Deploy GitHub Pages
         run: mkdocs gh-deploy --force
 
