Add work-in-progress docs (#21)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,10 +5,11 @@ site_url: https://nationalarchives.github.io/terraform-aws-immutable-aws-backup/
 repo_name: nationalarchives/terraform-aws-immutable-aws-backup
 repo_url: https://github.com/nationalarchives/terraform-aws-immutable-aws-backup
 edit_uri: edit/main/docs/
+dev_addr: localhost:8888
 use_directory_urls: true
 theme:
   name: material
-  logo: assets/images/tna.png
+  logo: assets/images/tna-square-logo.svg
   palette:
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
@@ -24,7 +25,6 @@ theme:
     - navigation.instant.progress
     - navigation.tracking
     - pymdownx.snippets
-    - navigation.footer
     - toc.integrate
     - navigation.top
     - search.suggest
@@ -44,6 +44,8 @@ extra:
 
 nav:
   - Home: index.md
+  - Concept: concept.md
+  - Architecture: architecture.md
 
 plugins:
   - social
