--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ dev_addr: localhost:8888
 use_directory_urls: true
 theme:
   name: material
-  logo: assets/images/tna-square-logo.svg
+  logo: assets/images/tna-96x96.png
   palette:
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
