--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,7 @@ nav:
   - Home: index.md
   - Concept: concept.md
   - Architecture: architecture.md
+  - Using the module: usage.md
 
 plugins:
   - social
