--- a/.github/workflows/infrastructure-checks.yaml
+++ b/.github/workflows/infrastructure-checks.yaml
@@ -14,10 +14,14 @@ jobs:
     defaults:
       run:
         shell: bash
-
     steps:
+      - name: Harden the runner (Audit all outbound calls)
+        uses: step-security/harden-runner@6c439dc8bdf85cadbbce9ed30d1c7b959517bc49 # v2.12.2
+        with:
+          egress-policy: audit
+
       - name: Checkout Repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.4.2
 
       - name: Setup Terraform
         # This action installs a specific version of Terraform.
@@ -26,27 +30,15 @@ jobs:
           terraform_version: 1.9.0 
 
       - name: Terraform Format Check
-        # Checks if Terraform files are correctly formatted.
-        # '-check=true' ensures it only checks and doesn't modify.
-        # '-diff' shows the differences if formatting is not correct.
-        run: |
-          echo "Running terraform fmt -check -diff in '/'"
-          terraform fmt -check=true -recursive
+        run: terraform fmt -check=true -recursive
 
-      - name: Terraform Init (for Validation)
-        # Initializes Terraform modules. '-backend=false' is crucial for CI/CD
-        # as it avoids configuring a real backend, only downloading providers.
-        run: |
-          echo "Running terraform init -backend=false in root directory"
-          terraform init -backend=false
+      - name: Terraform Init
+        run: terraform init -backend=false
 
       - name: Terraform Validate
-        # Validates the Terraform configuration files for syntax and consistency.
-        run: |
-          echo "Running terraform validate in root directory"
-          terraform validate
+        run: terraform validate
 
   call_tflint_workflow:
-    name: Run Dedicated TFLint
+    name: Run TFLint
     needs: terraform_validation
     uses: ./.github/workflows/tflint.yaml
