--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -47,34 +47,11 @@ jobs:
       - name: Terraform validate
         working-directory: ./examples/tags
         run: terraform validate
-        
-  secret_scan:
-    name: Secret scan
-    runs-on: ubuntu-latest
-    steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@6c439dc8bdf85cadbbce9ed30d1c7b959517bc49 # v2.12.2
-        with:
-          egress-policy: audit
-
-      - name: Checkout code
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: Install GitLeaks
-        run: |
-          wget https://github.com/gitleaks/gitleaks/releases/download/v8.16.1/gitleaks_8.16.1_linux_x64.tar.gz && \
-          tar -xf gitleaks_8.16.1_linux_x64.tar.gz
-          sudo mv gitleaks /usr/local/bin/gitleaks && \
-          sudo chmod +x /usr/local/bin/gitleaks
-      - name: Run GitLeaks Scan
-        run: |
-          gitleaks detect --source . -v
 
   terraform_plan:
     name: Terraform plan
     runs-on: ubuntu-latest
-    needs:
-      - terraform_validate
-      - secret_scan
+    needs: terraform_validate
     defaults:
       run:
         working-directory: ./examples/tags
