--- a/.github/workflows/plan-examples-tags.yml
+++ b/.github/workflows/plan-examples-tags.yml
@@ -1,10 +1,11 @@
-name: Terraform Plan
+name: Plan examples/tags
+
 on:
   workflow_dispatch:
   push:
     paths:
       - "**/*.tf"
-      - ".github/workflows/plan.yml"
+      - ".github/workflows/plan-examples-tags.yml"
     branches:
       - "**"
 
@@ -18,7 +19,6 @@ jobs:
   terraform_validate:
     name: Terraform validate
     runs-on: ubuntu-latest
-
     permissions:
       id-token: write
       contents: read
@@ -28,23 +28,18 @@ jobs:
         uses: step-security/harden-runner@6c439dc8bdf85cadbbce9ed30d1c7b959517bc49 # v2.12.2
         with:
           egress-policy: audit
-
       - name: Terraform setup
         uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
         with:
           terraform_version: 1.12.1
-
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Terraform format
+      - name: terraform fmt -check -recursive
         run: terraform fmt -check -recursive
-
-      - name: Terraform init
+      - name: terraform init -backend=false
         working-directory: ./examples/tags
-        run: terraform init -get -backend=false
-
-      - name: Terraform validate
+        run: terraform init -backend=false
+      - name: terraform validate
         working-directory: ./examples/tags
         run: terraform validate
 
@@ -55,7 +50,6 @@ jobs:
     defaults:
       run:
         working-directory: ./examples/tags
-
     permissions:
       id-token: write
       contents: read
@@ -66,27 +60,22 @@ jobs:
         uses: step-security/harden-runner@6c439dc8bdf85cadbbce9ed30d1c7b959517bc49 # v2.12.2
         with:
           egress-policy: audit
-
       - name: Terraform setup
         uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
         with:
           terraform_version: 1.12.1
-
-      - name: checkout
+      - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Configure AWS Credentials
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@b47578312673ae6fa5b5096b330d9fbac3d116df # v4.2.1
         with:
           role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE_ARN}}
           aws-region: ${{ secrets.AWS_REGION }}
-
-      - name: Terraform initialise
+      - name: terraform init
         run: >
           terraform init
           -backend-config=bucket=${{ secrets.TERRAFORM_STATE_BUCKET}}
           -backend-config=key=${{ secrets.TERRAFORM_STATE_KEY}}
           -backend-config=region=${{ secrets.TERRAFORM_STATE_REGION}}
-
       - name: terraform plan
         run: terraform plan -out tfplan
