--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -1,4 +1,5 @@
-name: Publish website
+name: Publish docs
+
 on:
   push:
     branches:
@@ -15,27 +16,25 @@ permissions:
 
 jobs:
   deploy:
-    name: Publish docs website
+    name: Publish docs
     runs-on: ubuntu-latest
     steps:
       - name: Harden the runner (Audit all outbound calls)
         uses: step-security/harden-runner@6c439dc8bdf85cadbbce9ed30d1c7b959517bc49 # v2.12.2
         with:
           egress-policy: audit
-
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Configure Git Credentials
+      - name: Configure Git credentials
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-
-      - name: Setup Python
+      - name: Install Python
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: 3.13
-
+      - name: Install Python dependencies
+        run: pip install -r requirements-docs.txt
       - name: Set up build cache
         uses: actions/cache/restore@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
         with:
@@ -43,14 +42,8 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-
-      - name: Install dependencies
-        run: |
-          pip install -r requirements-docs.txt
-
       - name: Deploy GitHub Pages
         run: mkdocs gh-deploy --force
-
       - name: Save build cache
         uses: actions/cache/save@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
         with:
