--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -1,4 +1,4 @@
-name: Run TFLint
+name: TFLint
 
 on:
   workflow_call:
@@ -10,23 +10,19 @@ jobs:
   tflint:
     runs-on: ubuntu-latest
     steps:
-      - name: Harden the runner (Audit all outbound calls)
+      - name: Harden the runner (audit all outbound calls)
         uses: step-security/harden-runner@6c439dc8bdf85cadbbce9ed30d1c7b959517bc49 # v2.12.2
         with:
           egress-policy: audit
-
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Setup TFLint with checksum verification
+      - name: Install TFLint
         uses: terraform-linters/setup-tflint@90f302c255ef959cbfb4bd10581afecdb7ece3e6 # v4.1.1
         with:
           tflint_version: v0.58.0
           checksums: |
-            1e8ccdf3e4b57ba154545b4343621bf46f25ca8f5cc97e36432469752f7ef0c0 
-
-      - name: Initialise & Install TFLint AWS Ruleset Plugin
+            1e8ccdf3e4b57ba154545b4343621bf46f25ca8f5cc97e36432469752f7ef0c0
+      - name: tflint --init
         run: tflint --init
-
-      - name: Run TFLint
+      - name: tflint
         run: tflint
