Dependabot should ignore the stacks deployed by the Deployment Helper Lambda
These stacks are pinned to Terraform versions to prevent the provider becoming too large for the Lambda function's `/tmp` directory.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,5 +7,7 @@ updates:
   - package-ecosystem: "terraform"
     directories:
       - "**/*"
+    exclude-paths:
+      - "modules/deployment-helper-regional/src/terraform-stacks"
     schedule:
       interval: "weekly"
